CME-1083 Fixed integration test failures